feat: use scheduled jobs to sync stats
