# app/src/main/webui/src/api/model/index.ts
@@ -11,6 +11,14 @@ export * from "./bazarrWebhookPayloadMessage";
 export * from "./bazarrWebhookPayloadTitle";
 export * from "./bazarrWebhookPayloadType";
 export * from "./getApiTimelineParams";
+export * from "./jobExecutionDto";
+export * from "./jobExecutionDtoDurationMs";
+export * from "./jobExecutionDtoError";
+export * from "./jobStatusDto";
+export * from "./jobStatusDtoDisplayName";
+export * from "./jobStatusDtoLastExecution";
+export * from "./jobStatusDtoNextFireTime";
+export * from "./jobStatusDtoSchedule";
 export * from "./libraryStats";
 export * from "./lidarrWebhookAlbum";
 export * from "./lidarrWebhookAlbumGenres";
